--- a/src/sass/components/_modal-prod-menu.scss
+++ b/src/sass/components/_modal-prod-menu.scss
@@ -283,6 +283,9 @@ img {
   font-size: 12px;
   line-height: calc(15px / 12px);
   cursor: pointer;
+  @media screen and (min-width: $tab) {
+    font-size: 14px;
+  }
 }
 
 .assortment__label {
