--- a/src/partials/modal-prod-menu.html
+++ b/src/partials/modal-prod-menu.html
@@ -1,6 +1,6 @@
-<div class="backdrop is-hidden" data-modal="7">
+<div class="backdrop is-hidden" data-modal7>
   <div class="modal">
-    <button type="button" class="modal__close" data-modal-close="7">
+    <button type="button" class="modal__close" data-modal-close7>
       <svg class="modal__button-X" width="12" height="12">
         <use href="./images/modal-mob-menu/modal_x.svg#cross"></use>
       </svg>
