--- a/src/sass/components/_modal-prod-menu.scss
+++ b/src/sass/components/_modal-prod-menu.scss
@@ -123,7 +123,8 @@
   bottom: 11px;
   left: 12px;
   fill: var(--main-color-text);
-  transition: transform var(--animation), fill var(--animation);
+  transition: transform $display-time $function-time,
+    fill $display-time $function-time;
 }
 
 .order__textarea {
@@ -136,7 +137,8 @@
   resize: none;
   padding: 8px 12px;
   cursor: pointer;
-  transition: transform var(--animation), border var(--animation);
+  transition: transform $display-time $function-time,
+    border $display-time $function-time;
   font-weight: 400;
   font-size: 12px;
   line-height: 140%;
